mini.output
Terminales no usados en la gramática

   AND_ASIG
   CABECERA
   CADA
   CONTINUAR
   DEFECTO
   DIV_ASIG
   ENCAMBIO
   ES
   ESCAPE
   ESTRUCTURA
   ETIQUETA
   EXCEPCION
   FD_ASIG
   FI_ASIG
   FUNCION
   HACER
   HASH
   INDIRECCION
   LANZA
   MOD_ASIG
   MULT_ASIG
   NADA
   OTRA
   OR_ASIG
   POT_ASIG
   PRINCIPIO
   REF
   RESTA_ASIG
   RUTA
   SUMA_ASIG
   TAMANO
   UNION
   XOR_ASIG


Gramática

    0 $accept: programa $end

    1 programa: definicion_programa

    2 definicion_programa: PROGRAMA nombre ';' bloque_programa
    3                    | error ';'

    4 nombres: nombre
    5        | nombres ',' nombre

    6 nombre: IDENTIFICADOR

    7 bloque_programa: declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones

    8 declaracion_tipos: %empty
    9                  | TIPOS declaraciones_tipos

   10 declaraciones_tipos: declaracion_tipo
   11                    | declaraciones_tipos declaracion_tipo

   12 declaracion_tipo: nombre '=' tipo_no_estructurado_o_nombre_tipo ';'
   13                 | error ';'

   14 tipo_escalar: ENTERO
   15             | REAL
   16             | CARACTER
   17             | CADENA
   18             | error ';'

   19 tipo_fichero: FICHERO

   20 tipo_enumerado: '(' expresiones_constantes ')'

   21 tipo_lista: ARRAY DE tipo_no_estructurado_o_nombre_tipo
   22           | ARRAY '[' rangos ']' DE tipo_no_estructurado_o_nombre_tipo

   23 tipo_conjunto: CONJUNTO DE tipo_no_estructurado_o_nombre_tipo

   24 tipo_no_estructurado_o_nombre_tipo: nombre
   25                                   | tipo_escalar
   26                                   | tipo_fichero
   27                                   | tipo_enumerado
   28                                   | tipo_lista
   29                                   | tipo_conjunto

   30 expresiones_constantes: expresion_constante
   31                       | expresiones_constantes ',' expresion_constante
   32                       | error ';'

   33 rangos: rango
   34       | rangos ',' rango
   35       | error ';'

   36 rango: expresion ':' expresion
   37      | expresion ':' expresion ':' expresion

   38 declaracion_constantes: %empty
   39                       | CONSTANTES declaraciones_constantes

   40 declaraciones_constantes: declaracion_constante
   41                         | declaraciones_constantes declaracion_constante

   42 declaracion_constante: nombre ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'
   43                      | error ';'

   44 valor_constante: expresion
   45                | '[' valores_constantes ']'

   46 valores_constantes: valor_constante
   47                   | valores_constantes ',' valor_constante

   48 declaracion_variables: %empty
   49                      | VARIABLES declaraciones_variables

   50 declaraciones_variables: declaracion_variable
   51                        | declaraciones_variables declaracion_variable
   52                        | error ';'

   53 declaracion_variable: nombres ':' tipo_no_estructurado_o_nombre_tipo ';'
   54                     | nombres ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

   55 bloque_instrucciones: '{' bloques_instrucciones '}'

   56 bloques_instrucciones: instruccion
   57                      | bloques_instrucciones instruccion

   58 instruccion: ';'
   59            | instruccion_asignacion
   60            | instruccion_salir
   61            | instruccion_devolver
   62            | instruccion_si
   63            | instruccion_bucle
   64            | instruccion_lanzar
   65            | error ';'

   66 instruccion_asignacion: objeto '=' expresion ';'

   67 instruccion_salir: SALTAR ';'
   68                  | SALTAR SI expresion ';'

   69 instruccion_devolver: DEVOLVER ';'
   70                     | DEVOLVER expresion ';'

   71 instruccion_si: SI expresion SINO bloque_instrucciones
   72               | SI expresion SINO bloque_instrucciones SINO bloque_instrucciones

   73 instruccion_bucle: clausula_iteracion bloque_instrucciones

   74 clausula_iteracion: PARA nombre
   75                   | MIENTRAS CONJUNTO nombre
   76                   | MIENTRAS expresion
   77                   | MIENTRAS FIN expresion
   78                   | error ';'

   79 instruccion_lanzar: EJECUTA nombre ';'

   80 expres: expresion
   81       | expres ',' expresion

   82 expresion: expresion1

   83 expresion1: expresion1 OR expresion2
   84           | expresion2

   85 expresion2: expresion2 AND expresionNegacion
   86           | expresionNegacion

   87 expresionNegacion: '!' expresion3
   88                  | expresion3

   89 expresion3: expresion3 LE expresion4
   90           | expresion3 GE expresion4
   91           | expresion3 '<' expresion4
   92           | expresion3 '>' expresion4
   93           | expresion3 EQ expresion4
   94           | expresion3 NEQ expresion4
   95           | expresion4

   96 expresion4: expresion4 '^' expresion5
   97           | expresion5

   98 expresion5: expresion5 '@' expresion6
   99           | expresion6

  100 expresion6: expresion6 '&' expresion7
  101           | expresion7

  102 expresion7: expresion7 FLECHA_IZDA expresion8
  103           | expresion7 FLECHA_DCHA expresion8
  104           | expresion8

  105 expresion8: expresion8 '+' expresion9
  106           | expresion8 '-' expresion9
  107           | expresion9

  108 expresion9: expresion9 '*' expresion10
  109           | expresion9 '/' expresion10
  110           | expresion9 '%' expresion10
  111           | expresion10

  112 expresion10: expresion11 POTENCIA expresion10
  113            | expresion11

  114 expresion11: "-" expresion_primaria
  115            | expresion_primaria

  116 expresion_primaria: expresion_constante
  117                   | objeto
  118                   | '(' expresion ')'
  119                   | error ';'

  120 objeto: nombre
  121       | objeto '[' expres ']'
  122       | objeto '.' IDENTIFICADOR

  123 expresion_constante: CTC_ENTERA
  124                    | CTC_REAL
  125                    | CTC_CADENA
  126                    | CTC_CARACTER


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 87
'%' (37) 110
'&' (38) 100
'(' (40) 20 118
')' (41) 20 118
'*' (42) 108
'+' (43) 105
',' (44) 5 31 34 47 81
'-' (45) 106
'.' (46) 122
'/' (47) 109
':' (58) 36 37 42 53 54
';' (59) 2 3 12 13 18 32 35 42 43 52 53 54 58 65 66 67 68 69 70 78
    79 119
'<' (60) 91
'=' (61) 12 42 54 66
'>' (62) 92
'@' (64) 98
'[' (91) 22 45 121
']' (93) 22 45 121
'^' (94) 96
'{' (123) 55
'}' (125) 55
error (256) 3 13 18 32 35 43 52 65 78 119
AND (258) 85
AND_ASIG (259)
ARRAY (260) 21 22
CABECERA (261)
CADA (262)
CADENA (263) 17
CARACTER (264) 16
CONJUNTO (265) 23 75
CONSTANTES (266) 39
CONTINUAR (267)
CTC_CADENA (268) 125
CTC_CARACTER (269) 126
CTC_ENTERA (270) 123
CTC_REAL (271) 124
DE (272) 21 22 23
DEFECTO (273)
DIV_ASIG (274)
DEVOLVER (275) 69 70
EJECUTA (276) 79
ENCAMBIO (277)
ENTERO (278) 14
EQ (279) 93
ES (280)
ESCAPE (281)
ESTRUCTURA (282)
ETIQUETA (283)
EXCEPCION (284)
FD_ASIG (285)
FI_ASIG (286)
FLECHA_DCHA (287) 103
FLECHA_IZDA (288) 102
FICHERO (289) 19
FIN (290) 77
FUNCION (291)
HACER (292)
HASH (293)
GE (294) 90
IDENTIFICADOR (295) 6 122
INDIRECCION (296)
LANZA (297)
LE (298) 89
MIENTRAS (299) 75 76 77
MOD_ASIG (300)
MULT_ASIG (301)
NADA (302)
NEQ (303) 94
OR (304) 83
OTRA (305)
OR_ASIG (306)
PARA (307) 74
POT_ASIG (308)
PRINCIPIO (309)
PROGRAMA (310) 2
POTENCIA (311) 112
REAL (312) 15
REF (313)
RESTA_ASIG (314)
RUTA (315)
SALTAR (316) 67 68
SI (317) 68 71 72
SINO (318) 71 72
SUMA_ASIG (319)
TAMANO (320)
TIPOS (321) 9
UNION (322)
VARIABLES (323) 49
XOR_ASIG (324)
"-" (325) 114


No terminales con las reglas donde aparecen

$accept (93)
    en la izquierda: 0
programa (94)
    en la izquierda: 1, en la derecha: 0
definicion_programa (95)
    en la izquierda: 2 3, en la derecha: 1
nombres (96)
    en la izquierda: 4 5, en la derecha: 5 53 54
nombre (97)
    en la izquierda: 6, en la derecha: 2 4 5 12 24 42 74 75 79 120
bloque_programa (98)
    en la izquierda: 7, en la derecha: 2
declaracion_tipos (99)
    en la izquierda: 8 9, en la derecha: 7
declaraciones_tipos (100)
    en la izquierda: 10 11, en la derecha: 9 11
declaracion_tipo (101)
    en la izquierda: 12 13, en la derecha: 10 11
tipo_escalar (102)
    en la izquierda: 14 15 16 17 18, en la derecha: 25
tipo_fichero (103)
    en la izquierda: 19, en la derecha: 26
tipo_enumerado (104)
    en la izquierda: 20, en la derecha: 27
tipo_lista (105)
    en la izquierda: 21 22, en la derecha: 28
tipo_conjunto (106)
    en la izquierda: 23, en la derecha: 29
tipo_no_estructurado_o_nombre_tipo (107)
    en la izquierda: 24 25 26 27 28 29, en la derecha: 12 21 22 23
    42 53 54
expresiones_constantes (108)
    en la izquierda: 30 31 32, en la derecha: 20 31
rangos (109)
    en la izquierda: 33 34 35, en la derecha: 22 34
rango (110)
    en la izquierda: 36 37, en la derecha: 33 34
declaracion_constantes (111)
    en la izquierda: 38 39, en la derecha: 7
declaraciones_constantes (112)
    en la izquierda: 40 41, en la derecha: 39 41
declaracion_constante (113)
    en la izquierda: 42 43, en la derecha: 40 41
valor_constante (114)
    en la izquierda: 44 45, en la derecha: 42 46 47 54
valores_constantes (115)
    en la izquierda: 46 47, en la derecha: 45 47
declaracion_variables (116)
    en la izquierda: 48 49, en la derecha: 7
declaraciones_variables (117)
    en la izquierda: 50 51 52, en la derecha: 49 51
declaracion_variable (118)
    en la izquierda: 53 54, en la derecha: 50 51
bloque_instrucciones (119)
    en la izquierda: 55, en la derecha: 7 71 72 73
bloques_instrucciones (120)
    en la izquierda: 56 57, en la derecha: 55 57
instruccion (121)
    en la izquierda: 58 59 60 61 62 63 64 65, en la derecha: 56 57
instruccion_asignacion (122)
    en la izquierda: 66, en la derecha: 59
instruccion_salir (123)
    en la izquierda: 67 68, en la derecha: 60
instruccion_devolver (124)
    en la izquierda: 69 70, en la derecha: 61
instruccion_si (125)
    en la izquierda: 71 72, en la derecha: 62
instruccion_bucle (126)
    en la izquierda: 73, en la derecha: 63
clausula_iteracion (127)
    en la izquierda: 74 75 76 77 78, en la derecha: 73
instruccion_lanzar (128)
    en la izquierda: 79, en la derecha: 64
expres (129)
    en la izquierda: 80 81, en la derecha: 81 121
expresion (130)
    en la izquierda: 82, en la derecha: 36 37 44 66 68 70 71 72 76
    77 80 81 118
expresion1 (131)
    en la izquierda: 83 84, en la derecha: 82 83
expresion2 (132)
    en la izquierda: 85 86, en la derecha: 83 84 85
expresionNegacion (133)
    en la izquierda: 87 88, en la derecha: 85 86
expresion3 (134)
    en la izquierda: 89 90 91 92 93 94 95, en la derecha: 87 88 89
    90 91 92 93 94
expresion4 (135)
    en la izquierda: 96 97, en la derecha: 89 90 91 92 93 94 95 96
expresion5 (136)
    en la izquierda: 98 99, en la derecha: 96 97 98
expresion6 (137)
    en la izquierda: 100 101, en la derecha: 98 99 100
expresion7 (138)
    en la izquierda: 102 103 104, en la derecha: 100 101 102 103
expresion8 (139)
    en la izquierda: 105 106 107, en la derecha: 102 103 104 105 106
expresion9 (140)
    en la izquierda: 108 109 110 111, en la derecha: 105 106 107 108
    109 110
expresion10 (141)
    en la izquierda: 112 113, en la derecha: 108 109 110 111 112
expresion11 (142)
    en la izquierda: 114 115, en la derecha: 112 113
expresion_primaria (143)
    en la izquierda: 116 117 118 119, en la derecha: 114 115
objeto (144)
    en la izquierda: 120 121 122, en la derecha: 66 117 121 122
expresion_constante (145)
    en la izquierda: 123 124 125 126, en la derecha: 30 31 116


Estado 0

    0 $accept: . programa $end

    error     desplazar e ir al estado 1
    PROGRAMA  desplazar e ir al estado 2

    programa             ir al estado 3
    definicion_programa  ir al estado 4


Estado 1

    3 definicion_programa: error . ';'

    ';'  desplazar e ir al estado 5


Estado 2

    2 definicion_programa: PROGRAMA . nombre ';' bloque_programa

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre  ir al estado 7


Estado 3

    0 $accept: programa . $end

    $end  desplazar e ir al estado 8


Estado 4

    1 programa: definicion_programa .

    $default  reduce usando la regla 1 (programa)


Estado 5

    3 definicion_programa: error ';' .

    $default  reduce usando la regla 3 (definicion_programa)


Estado 6

    6 nombre: IDENTIFICADOR .

    $default  reduce usando la regla 6 (nombre)


Estado 7

    2 definicion_programa: PROGRAMA nombre . ';' bloque_programa

    ';'  desplazar e ir al estado 9


Estado 8

    0 $accept: programa $end .

    $default  aceptar


Estado 9

    2 definicion_programa: PROGRAMA nombre ';' . bloque_programa

    TIPOS  desplazar e ir al estado 10

    $default  reduce usando la regla 8 (declaracion_tipos)

    bloque_programa    ir al estado 11
    declaracion_tipos  ir al estado 12


Estado 10

    9 declaracion_tipos: TIPOS . declaraciones_tipos

    error          desplazar e ir al estado 13
    IDENTIFICADOR  desplazar e ir al estado 6

    nombre               ir al estado 14
    declaraciones_tipos  ir al estado 15
    declaracion_tipo     ir al estado 16


Estado 11

    2 definicion_programa: PROGRAMA nombre ';' bloque_programa .

    $default  reduce usando la regla 2 (definicion_programa)


Estado 12

    7 bloque_programa: declaracion_tipos . declaracion_constantes declaracion_variables bloque_instrucciones

    CONSTANTES  desplazar e ir al estado 17

    $default  reduce usando la regla 38 (declaracion_constantes)

    declaracion_constantes  ir al estado 18


Estado 13

   13 declaracion_tipo: error . ';'

    ';'  desplazar e ir al estado 19


Estado 14

   12 declaracion_tipo: nombre . '=' tipo_no_estructurado_o_nombre_tipo ';'

    '='  desplazar e ir al estado 20


Estado 15

    9 declaracion_tipos: TIPOS declaraciones_tipos .
   11 declaraciones_tipos: declaraciones_tipos . declaracion_tipo

    error          desplazar e ir al estado 13
    IDENTIFICADOR  desplazar e ir al estado 6

    CONSTANTES  reduce usando la regla 9 (declaracion_tipos)
    VARIABLES   reduce usando la regla 9 (declaracion_tipos)
    '{'         reduce usando la regla 9 (declaracion_tipos)

    nombre            ir al estado 14
    declaracion_tipo  ir al estado 21


Estado 16

   10 declaraciones_tipos: declaracion_tipo .

    $default  reduce usando la regla 10 (declaraciones_tipos)


Estado 17

   39 declaracion_constantes: CONSTANTES . declaraciones_constantes

    error          desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 6

    nombre                    ir al estado 23
    declaraciones_constantes  ir al estado 24
    declaracion_constante     ir al estado 25


Estado 18

    7 bloque_programa: declaracion_tipos declaracion_constantes . declaracion_variables bloque_instrucciones

    VARIABLES  desplazar e ir al estado 26

    $default  reduce usando la regla 48 (declaracion_variables)

    declaracion_variables  ir al estado 27


Estado 19

   13 declaracion_tipo: error ';' .

    $default  reduce usando la regla 13 (declaracion_tipo)


Estado 20

   12 declaracion_tipo: nombre '=' . tipo_no_estructurado_o_nombre_tipo ';'

    error          desplazar e ir al estado 28
    ARRAY          desplazar e ir al estado 29
    CADENA         desplazar e ir al estado 30
    CARACTER       desplazar e ir al estado 31
    CONJUNTO       desplazar e ir al estado 32
    ENTERO         desplazar e ir al estado 33
    FICHERO        desplazar e ir al estado 34
    IDENTIFICADOR  desplazar e ir al estado 6
    REAL           desplazar e ir al estado 35
    '('            desplazar e ir al estado 36

    nombre                              ir al estado 37
    tipo_escalar                        ir al estado 38
    tipo_fichero                        ir al estado 39
    tipo_enumerado                      ir al estado 40
    tipo_lista                          ir al estado 41
    tipo_conjunto                       ir al estado 42
    tipo_no_estructurado_o_nombre_tipo  ir al estado 43


Estado 21

   11 declaraciones_tipos: declaraciones_tipos declaracion_tipo .

    $default  reduce usando la regla 11 (declaraciones_tipos)


Estado 22

   43 declaracion_constante: error . ';'

    ';'  desplazar e ir al estado 44


Estado 23

   42 declaracion_constante: nombre . ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

    ':'  desplazar e ir al estado 45


Estado 24

   39 declaracion_constantes: CONSTANTES declaraciones_constantes .
   41 declaraciones_constantes: declaraciones_constantes . declaracion_constante

    error          desplazar e ir al estado 22
    IDENTIFICADOR  desplazar e ir al estado 6

    VARIABLES  reduce usando la regla 39 (declaracion_constantes)
    '{'        reduce usando la regla 39 (declaracion_constantes)

    nombre                 ir al estado 23
    declaracion_constante  ir al estado 46


Estado 25

   40 declaraciones_constantes: declaracion_constante .

    $default  reduce usando la regla 40 (declaraciones_constantes)


Estado 26

   49 declaracion_variables: VARIABLES . declaraciones_variables

    error          desplazar e ir al estado 47
    IDENTIFICADOR  desplazar e ir al estado 6

    nombres                  ir al estado 48
    nombre                   ir al estado 49
    declaraciones_variables  ir al estado 50
    declaracion_variable     ir al estado 51


Estado 27

    7 bloque_programa: declaracion_tipos declaracion_constantes declaracion_variables . bloque_instrucciones

    '{'  desplazar e ir al estado 52

    bloque_instrucciones  ir al estado 53


Estado 28

   18 tipo_escalar: error . ';'

    ';'  desplazar e ir al estado 54


Estado 29

   21 tipo_lista: ARRAY . DE tipo_no_estructurado_o_nombre_tipo
   22           | ARRAY . '[' rangos ']' DE tipo_no_estructurado_o_nombre_tipo

    DE   desplazar e ir al estado 55
    '['  desplazar e ir al estado 56


Estado 30

   17 tipo_escalar: CADENA .

    $default  reduce usando la regla 17 (tipo_escalar)


Estado 31

   16 tipo_escalar: CARACTER .

    $default  reduce usando la regla 16 (tipo_escalar)


Estado 32

   23 tipo_conjunto: CONJUNTO . DE tipo_no_estructurado_o_nombre_tipo

    DE  desplazar e ir al estado 57


Estado 33

   14 tipo_escalar: ENTERO .

    $default  reduce usando la regla 14 (tipo_escalar)


Estado 34

   19 tipo_fichero: FICHERO .

    $default  reduce usando la regla 19 (tipo_fichero)


Estado 35

   15 tipo_escalar: REAL .

    $default  reduce usando la regla 15 (tipo_escalar)


Estado 36

   20 tipo_enumerado: '(' . expresiones_constantes ')'

    error         desplazar e ir al estado 58
    CTC_CADENA    desplazar e ir al estado 59
    CTC_CARACTER  desplazar e ir al estado 60
    CTC_ENTERA    desplazar e ir al estado 61
    CTC_REAL      desplazar e ir al estado 62

    expresiones_constantes  ir al estado 63
    expresion_constante     ir al estado 64


Estado 37

   24 tipo_no_estructurado_o_nombre_tipo: nombre .

    $default  reduce usando la regla 24 (tipo_no_estructurado_o_nombre_tipo)


Estado 38

   25 tipo_no_estructurado_o_nombre_tipo: tipo_escalar .

    $default  reduce usando la regla 25 (tipo_no_estructurado_o_nombre_tipo)


Estado 39

   26 tipo_no_estructurado_o_nombre_tipo: tipo_fichero .

    $default  reduce usando la regla 26 (tipo_no_estructurado_o_nombre_tipo)


Estado 40

   27 tipo_no_estructurado_o_nombre_tipo: tipo_enumerado .

    $default  reduce usando la regla 27 (tipo_no_estructurado_o_nombre_tipo)


Estado 41

   28 tipo_no_estructurado_o_nombre_tipo: tipo_lista .

    $default  reduce usando la regla 28 (tipo_no_estructurado_o_nombre_tipo)


Estado 42

   29 tipo_no_estructurado_o_nombre_tipo: tipo_conjunto .

    $default  reduce usando la regla 29 (tipo_no_estructurado_o_nombre_tipo)


Estado 43

   12 declaracion_tipo: nombre '=' tipo_no_estructurado_o_nombre_tipo . ';'

    ';'  desplazar e ir al estado 65


Estado 44

   43 declaracion_constante: error ';' .

    $default  reduce usando la regla 43 (declaracion_constante)


Estado 45

   42 declaracion_constante: nombre ':' . tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

    error          desplazar e ir al estado 28
    ARRAY          desplazar e ir al estado 29
    CADENA         desplazar e ir al estado 30
    CARACTER       desplazar e ir al estado 31
    CONJUNTO       desplazar e ir al estado 32
    ENTERO         desplazar e ir al estado 33
    FICHERO        desplazar e ir al estado 34
    IDENTIFICADOR  desplazar e ir al estado 6
    REAL           desplazar e ir al estado 35
    '('            desplazar e ir al estado 36

    nombre                              ir al estado 37
    tipo_escalar                        ir al estado 38
    tipo_fichero                        ir al estado 39
    tipo_enumerado                      ir al estado 40
    tipo_lista                          ir al estado 41
    tipo_conjunto                       ir al estado 42
    tipo_no_estructurado_o_nombre_tipo  ir al estado 66


Estado 46

   41 declaraciones_constantes: declaraciones_constantes declaracion_constante .

    $default  reduce usando la regla 41 (declaraciones_constantes)


Estado 47

   52 declaraciones_variables: error . ';'

    ';'  desplazar e ir al estado 67


Estado 48

    5 nombres: nombres . ',' nombre
   53 declaracion_variable: nombres . ':' tipo_no_estructurado_o_nombre_tipo ';'
   54                     | nombres . ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

    ','  desplazar e ir al estado 68
    ':'  desplazar e ir al estado 69


Estado 49

    4 nombres: nombre .

    $default  reduce usando la regla 4 (nombres)


Estado 50

   49 declaracion_variables: VARIABLES declaraciones_variables .
   51 declaraciones_variables: declaraciones_variables . declaracion_variable

    IDENTIFICADOR  desplazar e ir al estado 6

    $default  reduce usando la regla 49 (declaracion_variables)

    nombres               ir al estado 48
    nombre                ir al estado 49
    declaracion_variable  ir al estado 70


Estado 51

   50 declaraciones_variables: declaracion_variable .

    $default  reduce usando la regla 50 (declaraciones_variables)


Estado 52

   55 bloque_instrucciones: '{' . bloques_instrucciones '}'

    error          desplazar e ir al estado 71
    DEVOLVER       desplazar e ir al estado 72
    EJECUTA        desplazar e ir al estado 73
    IDENTIFICADOR  desplazar e ir al estado 6
    MIENTRAS       desplazar e ir al estado 74
    PARA           desplazar e ir al estado 75
    SALTAR         desplazar e ir al estado 76
    SI             desplazar e ir al estado 77
    ';'            desplazar e ir al estado 78

    nombre                  ir al estado 79
    bloques_instrucciones   ir al estado 80
    instruccion             ir al estado 81
    instruccion_asignacion  ir al estado 82
    instruccion_salir       ir al estado 83
    instruccion_devolver    ir al estado 84
    instruccion_si          ir al estado 85
    instruccion_bucle       ir al estado 86
    clausula_iteracion      ir al estado 87
    instruccion_lanzar      ir al estado 88
    objeto                  ir al estado 89


Estado 53

    7 bloque_programa: declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones .

    $default  reduce usando la regla 7 (bloque_programa)


Estado 54

   18 tipo_escalar: error ';' .

    $default  reduce usando la regla 18 (tipo_escalar)


Estado 55

   21 tipo_lista: ARRAY DE . tipo_no_estructurado_o_nombre_tipo

    error          desplazar e ir al estado 28
    ARRAY          desplazar e ir al estado 29
    CADENA         desplazar e ir al estado 30
    CARACTER       desplazar e ir al estado 31
    CONJUNTO       desplazar e ir al estado 32
    ENTERO         desplazar e ir al estado 33
    FICHERO        desplazar e ir al estado 34
    IDENTIFICADOR  desplazar e ir al estado 6
    REAL           desplazar e ir al estado 35
    '('            desplazar e ir al estado 36

    nombre                              ir al estado 37
    tipo_escalar                        ir al estado 38
    tipo_fichero                        ir al estado 39
    tipo_enumerado                      ir al estado 40
    tipo_lista                          ir al estado 41
    tipo_conjunto                       ir al estado 42
    tipo_no_estructurado_o_nombre_tipo  ir al estado 90


Estado 56

   22 tipo_lista: ARRAY '[' . rangos ']' DE tipo_no_estructurado_o_nombre_tipo

    error          desplazar e ir al estado 91
    CTC_CADENA     desplazar e ir al estado 59
    CTC_CARACTER   desplazar e ir al estado 60
    CTC_ENTERA     desplazar e ir al estado 61
    CTC_REAL       desplazar e ir al estado 62
    IDENTIFICADOR  desplazar e ir al estado 6
    '('            desplazar e ir al estado 92
    '!'            desplazar e ir al estado 93
    "-"            desplazar e ir al estado 94

    nombre               ir al estado 79
    rangos               ir al estado 95
    rango                ir al estado 96
    expresion            ir al estado 97
    expresion1           ir al estado 98
    expresion2           ir al estado 99
    expresionNegacion    ir al estado 100
    expresion3           ir al estado 101
    expresion4           ir al estado 102
    expresion5           ir al estado 103
    expresion6           ir al estado 104
    expresion7           ir al estado 105
    expresion8           ir al estado 106
    expresion9           ir al estado 107
    expresion10          ir al estado 108
    expresion11          ir al estado 109
    expresion_primaria   ir al estado 110
    objeto               ir al estado 111
    expresion_constante  ir al estado 112


Estado 57

   23 tipo_conjunto: CONJUNTO DE . tipo_no_estructurado_o_nombre_tipo

    error          desplazar e ir al estado 28
    ARRAY          desplazar e ir al estado 29
    CADENA         desplazar e ir al estado 30
    CARACTER       desplazar e ir al estado 31
    CONJUNTO       desplazar e ir al estado 32
    ENTERO         desplazar e ir al estado 33
    FICHERO        desplazar e ir al estado 34
    IDENTIFICADOR  desplazar e ir al estado 6
    REAL           desplazar e ir al estado 35
    '('            desplazar e ir al estado 36

    nombre                              ir al estado 37
    tipo_escalar                        ir al estado 38
    tipo_fichero                        ir al estado 39
    tipo_enumerado                      ir al estado 40
    tipo_lista                          ir al estado 41
    tipo_conjunto                       ir al estado 42
    tipo_no_estructurado_o_nombre_tipo  ir al estado 113


Estado 58

   32 expresiones_constantes: error . ';'

    ';'  desplazar e ir al estado 114


Estado 59

  125 expresion_constante: CTC_CADENA .

    $default  reduce usando la regla 125 (expresion_constante)


Estado 60

  126 expresion_constante: CTC_CARACTER .

    $default  reduce usando la regla 126 (expresion_constante)


Estado 61

  123 expresion_constante: CTC_ENTERA .

    $default  reduce usando la regla 123 (expresion_constante)


Estado 62

  124 expresion_constante: CTC_REAL .

    $default  reduce usando la regla 124 (expresion_constante)


Estado 63

   20 tipo_enumerado: '(' expresiones_constantes . ')'
   31 expresiones_constantes: expresiones_constantes . ',' expresion_constante

    ','  desplazar e ir al estado 115
    ')'  desplazar e ir al estado 116


Estado 64

   30 expresiones_constantes: expresion_constante .

    $default  reduce usando la regla 30 (expresiones_constantes)


Estado 65

   12 declaracion_tipo: nombre '=' tipo_no_estructurado_o_nombre_tipo ';' .

    $default  reduce usando la regla 12 (declaracion_tipo)


Estado 66

   42 declaracion_constante: nombre ':' tipo_no_estructurado_o_nombre_tipo . '=' valor_constante ';'

    '='  desplazar e ir al estado 117


Estado 67

   52 declaraciones_variables: error ';' .

    $default  reduce usando la regla 52 (declaraciones_variables)


Estado 68

    5 nombres: nombres ',' . nombre

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre  ir al estado 118


Estado 69

   53 declaracion_variable: nombres ':' . tipo_no_estructurado_o_nombre_tipo ';'
   54                     | nombres ':' . tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

    error          desplazar e ir al estado 28
    ARRAY          desplazar e ir al estado 29
    CADENA         desplazar e ir al estado 30
    CARACTER       desplazar e ir al estado 31
    CONJUNTO       desplazar e ir al estado 32
    ENTERO         desplazar e ir al estado 33
    FICHERO        desplazar e ir al estado 34
    IDENTIFICADOR  desplazar e ir al estado 6
    REAL           desplazar e ir al estado 35
    '('            desplazar e ir al estado 36

    nombre                              ir al estado 37
    tipo_escalar                        ir al estado 38
    tipo_fichero                        ir al estado 39
    tipo_enumerado                      ir al estado 40
    tipo_lista                          ir al estado 41
    tipo_conjunto                       ir al estado 42
    tipo_no_estructurado_o_nombre_tipo  ir al estado 119


Estado 70

   51 declaraciones_variables: declaraciones_variables declaracion_variable .

    $default  reduce usando la regla 51 (declaraciones_variables)


Estado 71

   65 instruccion: error . ';'
   78 clausula_iteracion: error . ';'

    ';'  desplazar e ir al estado 120


Estado 72

   69 instruccion_devolver: DEVOLVER . ';'
   70                     | DEVOLVER . expresion ';'

    error          desplazar e ir al estado 121
    CTC_CADENA     desplazar e ir al estado 59
    CTC_CARACTER   desplazar e ir al estado 60
    CTC_ENTERA     desplazar e ir al estado 61
    CTC_REAL       desplazar e ir al estado 62
    IDENTIFICADOR  desplazar e ir al estado 6
    ';'            desplazar e ir al estado 122
    '('            desplazar e ir al estado 92
    '!'            desplazar e ir al estado 93
    "-"            desplazar e ir al estado 94

    nombre               ir al estado 79
    expresion            ir al estado 123
    expresion1           ir al estado 98
    expresion2           ir al estado 99
    expresionNegacion    ir al estado 100
    expresion3           ir al estado 101
    expresion4           ir al estado 102
    expresion5           ir al estado 103
    expresion6           ir al estado 104
    expresion7           ir al estado 105
    expresion8           ir al estado 106
    expresion9           ir al estado 107
    expresion10          ir al estado 108
    expresion11          ir al estado 109
    expresion_primaria   ir al estado 110
    objeto               ir al estado 111
    expresion_constante  ir al estado 112


Estado 73

   79 instruccion_lanzar: EJECUTA . nombre ';'

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre  ir al estado 124


Estado 74

   75 clausula_iteracion: MIENTRAS . CONJUNTO nombre
   76                   | MIENTRAS . expresion
   77                   | MIENTRAS . FIN expresion

    error          desplazar e ir al estado 121
    CONJUNTO       desplazar e ir al estado 125
    CTC_CADENA     desplazar e ir al estado 59
    CTC_CARACTER   desplazar e ir al estado 60
    CTC_ENTERA     desplazar e ir al estado 61
    CTC_REAL       desplazar e ir al estado 62
    FIN            desplazar e ir al estado 126
    IDENTIFICADOR  desplazar e ir al estado 6
    '('            desplazar e ir al estado 92
    '!'            desplazar e ir al estado 93
    "-"            desplazar e ir al estado 94

    nombre               ir al estado 79
    expresion            ir al estado 127
    expresion1           ir al estado 98
    expresion2           ir al estado 99
    expresionNegacion    ir al estado 100
    expresion3           ir al estado 101
    expresion4           ir al estado 102
    expresion5           ir al estado 103
    expresion6           ir al estado 104
    expresion7           ir al estado 105
    expresion8           ir al estado 106
    expresion9           ir al estado 107
    expresion10          ir al estado 108
    expresion11          ir al estado 109
    expresion_primaria   ir al estado 110
    objeto               ir al estado 111
    expresion_constante  ir al estado 112


Estado 75

   74 clausula_iteracion: PARA . nombre

    IDENTIFICADOR  desplazar e ir al estado 6

    nombre  ir al estado 128


Estado 76

   67 instruccion_salir: SALTAR . ';'
   68                  | SALTAR . SI expresion ';'

    SI   desplazar e ir al estado 129
    ';'  desplazar e ir al estado 130


Estado 77

   71 instruccion_si: SI . expresion SINO bloque_instrucciones
   72               | SI . expresion SINO bloque_instrucciones SINO bloque_instrucciones

    error          desplazar e ir al estado 121
    CTC_CADENA     desplazar e ir al estado 59
    CTC_CARACTER   desplazar e ir al estado 60
    CTC_ENTERA     desplazar e ir al estado 61
    CTC_REAL       desplazar e ir al estado 62
    IDENTIFICADOR  desplazar e ir al estado 6
    '('            desplazar e ir al estado 92
    '!'            desplazar e ir al estado 93
    "-"            desplazar e ir al estado 94
